# sweepy

./: .gitattributes  .gitignore  AGENTS.md  Cargo.toml  README.md  browser.js  index.d.ts  index.js  package.json  pnpm-lock.yaml  sweepy.wasi-browser.js  sweepy.wasi.cjs
.github/: renovate.json
.github/workflows/: CI.yml
__test__/: cases.ts  index.spec.ts  package.json
__test__/fixtures/basic-default/: README.md  utils.ts
__test__/fixtures/basic-named/: README.md  utils.ts
__test__/fixtures/export-simple/: index.ts
__test__/fixtures/exports-all/: exports-all.ts  index.ts
__test__/fixtures/exports-named/: index.ts
__test__/fixtures/exports-with-extensions/: exports-named.js
__test__/fixtures/js-import/: utils.js
__test__/fixtures/jsx-import/: component.jsx
__test__/fixtures/namespace-import/: README.md  utils.ts
__test__/fixtures/path-aliases/: README.md
__test__/fixtures/path-aliases/lib/: helpers.ts
__test__/fixtures/path-aliases/src/: utils.ts
__test__/fixtures/reexport-all/: README.md  barrel.ts
__test__/fixtures/reexport-named/: barrel.ts  utils.ts
__test__/fixtures/side-effects/: setup.ts
__test__/fixtures/vue-basic/: Component.vue
__test__/fixtures/vue-chain/: App.vue  Child.vue  api.ts
__test__/fixtures/vue-mixed/: Component.vue  utils.ts
playground-project/: exports-named.ts  package.json
src/: analyzer.rs  lib.rs  main.rs
ts-playground/: package.json  sweepy.ts  tsconfig.json
ts-playground/src/: index.ts
ts-project/: export-all.ts  export-default.ts  index.ts
(+3 files in other folders)
