
[package]
authors = ["Joris Gallot"]
edition = "2024"
name = "sweepy"
version = "0.0.1"

[lib]
crate-type = ["cdylib"]

[dependencies]
napi = "3.0.0"
napi-derive = "3.0.0"
walkdir = "2.3"
clap = { version = "4.3", features = ["derive"] }
oxc_allocator = "0.99.0"
oxc_parser = "0.99.0"
oxc_span = "0.99.0"
oxc_ast = "0.99.0"
anyhow = "1.0"
path-clean = "1.0.1"

[build-dependencies]
napi-build = "2"

[profile.release]
lto = true
strip = "symbols"
